fixed removing items and flickering

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,16 @@
 	cursor: pointer;
 	margin-left: 20px;
 }
+
+.skeleton {
+	height: 700px;
+	width: 1240px;
+	max-width: 1280px;
+	background-color: black;
+}
+
+.urlInput {
+	width: 500px;
+	height: 30px;
+	margin: 10px 10px;
+}
