--- a/src/index.css
+++ b/src/index.css
@@ -40,13 +40,14 @@ button {
 	border: 1px solid transparent;
 	padding: 0.6em 1.2em;
 	font-size: 1em;
-	font-weight: 500;
+	font-weight: 700;
 	font-family: inherit;
 	/* background-color: #1a1a1a; */
 	background-color: #bcb5b5;
 	cursor: pointer;
 	transition: border-color 0.25s;
 	margin-left: 5px;
+	color: black;
 }
 button:hover {
 	border-color: #646cff;
